tests/ui/tests/lowering/constructor-with-explicit-body.stderr
error[E015]: missing mandatory type annotation on declaration `container`
 --> ${DIRECTORY}/lowering/constructor-with-explicit-body.lushui:4:14
  |
4 |     container = attachment
  |             >< 
  |
 help: provide a type annotation for the declaration with `: ?type`

error[E020]: `container` is defined multiple times in this scope
 --> ${DIRECTORY}/lowering/constructor-with-explicit-body.lushui:4:17
  |
4 |     container = attachment
  |                 ^^^^^^^^^^ conflicting definition
  |
 note: the body of the constructor is implied but it also has a body introduced by `=`

error[E020]: `attachment` is defined multiple times in this scope
 --> ${DIRECTORY}/lowering/constructor-with-explicit-body.lushui:5:29
  |
5 |     attachment: Container = container
  |                             ^^^^^^^^^ conflicting definition
  |
 note: the body of the constructor is implied but it also has a body introduced by `=`

error: aborting due to 3 previous errors
 note: the errors E015 and E020 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

